tree-sitter-opal/test/corpus/inheritance.txt
================
Class with parent
================

class Dog < Animal
  needs breed: String
end

---

(source_file
  (class_definition
    (identifier)
    (identifier)
    (needs_declaration (identifier) (type_annotation (identifier)))))

================
Super call
================

class Dog < Animal
  def speak()
    super()
  end
end

---

(source_file
  (class_definition
    (identifier)
    (identifier)
    (function_definition
      (identifier)
      (parameters)
      (body (expression_statement (super_call))))))
